--- a/DariTn/DariTn.csproj
+++ b/DariTn/DariTn.csproj
@@ -187,9 +187,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-
-    <Compile Include="Models\Credit.cs" />
-
+    <Compile Include="Models\Entities\Credit.cs" />
     <Compile Include="Models\Entities\Complaint.cs" />
     <Compile Include="Models\Entities\Media.cs" />
     <Compile Include="Models\IdentityModels.cs" />
