--- a/DariTn/DariTn.csproj
+++ b/DariTn/DariTn.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\RestControllers\AssetAdvsController.cs" />
+    <Compile Include="Controllers\RestControllers\ComplaintsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -547,6 +548,12 @@
     <Content Include="Views\AssetAdvs\Details.cshtml" />
     <Content Include="Views\AssetAdvs\Edit.cshtml" />
     <Content Include="Views\AssetAdvs\Index.cshtml" />
+    <Content Include="Views\Complaints\Create.cshtml" />
+    <Content Include="Views\Complaints\Delete.cshtml" />
+    <Content Include="Views\Complaints\Details.cshtml" />
+    <Content Include="Views\Complaints\Edit.cshtml" />
+    <Content Include="Views\Complaints\Index.cshtml" />
+    <Content Include="Views\Complaints\ComplaintRequests.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
