--- a/DariTn/DariTn.csproj
+++ b/DariTn/DariTn.csproj
@@ -627,6 +627,7 @@
     <Content Include="Views\FurnitureAdvs\IndexAdmin3.cshtml" />
     <Content Include="Views\FurnitureAdvs\Accept.cshtml" />
     <Content Include="Views\FurnitureAdvs\DetailsAdmin.cshtml" />
+    <Content Include="Views\AssetAdvs\AddComplaint.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
