--- a/DariTn/DariTn.csproj
+++ b/DariTn/DariTn.csproj
@@ -624,10 +624,10 @@
     <Content Include="Views\Localisations\Index.cshtml" />
     <Content Include="Views\FurnitureAdvs\IndexAdmin.cshtml" />
     <Content Include="Views\FurnitureAdvs\IndexAdmin2.cshtml" />
-    <Content Include="Views\FurnitureAdvs\IndexAdmin3.cshtml" />
     <Content Include="Views\FurnitureAdvs\Accept.cshtml" />
     <Content Include="Views\FurnitureAdvs\DetailsAdmin.cshtml" />
     <Content Include="Views\AssetAdvs\AddComplaint.cshtml" />
+    <Content Include="Views\FurnitureAdvs\CreateAdmin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
