--- a/DariTn/DariTn.csproj
+++ b/DariTn/DariTn.csproj
@@ -185,14 +185,13 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\RestControllers\AssetAdvsController.cs" />
     <Compile Include="Controllers\RestControllers\BanksController.cs" />
+    <Compile Include="Controllers\RestControllers\BoughtAssetsController.cs" />
     <Compile Include="Controllers\RestControllers\ComplaintsController.cs" />
     <Compile Include="Controllers\RestControllers\CreditFormulasController.cs" />
-
     <Compile Include="Controllers\RestControllers\CreditsController.cs" />
-
     <Compile Include="Controllers\RestControllers\FurnitureAdvsController.cs" />
-
     <Compile Include="Controllers\RestControllers\InsuranceAgenciesController.cs" />
+    <Compile Include="Controllers\RestControllers\InsurancesController.cs" />
     <Compile Include="Controllers\RestControllers\OrdersController.cs" />
     <Compile Include="Controllers\RestControllers\LocalisationsController.cs" />
     <Compile Include="Controllers\RestControllers\PacksController.cs" />
@@ -206,6 +205,7 @@
     <Compile Include="Models\EmailViewModel.cs" />
     <Compile Include="Models\Entities\AssetAdv.cs" />
     <Compile Include="Models\Entities\Bank.cs" />
+    <Compile Include="Models\Entities\BoughtAsset.cs" />
     <Compile Include="Models\Entities\CartSold.cs" />
     <Compile Include="Models\Entities\Client.cs" />
     <Compile Include="Models\Entities\Complaint.cs" />
@@ -213,6 +213,7 @@
     <Compile Include="Models\Entities\CreditFormula.cs" />
     <Compile Include="Models\Entities\Delivery.cs" />
     <Compile Include="Models\Entities\FurnitureAdv.cs" />
+    <Compile Include="Models\Entities\Insurance.cs" />
     <Compile Include="Models\Entities\InsuranceAgency.cs" />
     <Compile Include="Models\Entities\Localisation.cs" />
     <Compile Include="Models\Entities\Media.cs" />
@@ -221,6 +222,8 @@
     <Compile Include="Models\Entities\ShoppingCart.cs" />
     <Compile Include="Models\Entities\User.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\InsuranceEditViewModel.cs" />
+    <Compile Include="Models\InsuranceNewViewModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -601,14 +604,12 @@
     <Content Include="Views\Packs\Details.cshtml" />
     <Content Include="Views\Packs\Edit.cshtml" />
     <Content Include="Views\Packs\Index.cshtml" />
-
     <Content Include="Views\Credits\Create.cshtml" />
     <Content Include="Views\Credits\Delete.cshtml" />
     <Content Include="Views\Credits\Compare.cshtml" />
     <Content Include="Views\Credits\Edit.cshtml" />
     <Content Include="Views\Credits\Index.cshtml" />
     <Content Include="Views\Credits\Email.cshtml" />
-
     <Content Include="Views\FurnitureAdvs\Create.cshtml" />
     <Content Include="Views\FurnitureAdvs\Delete.cshtml" />
     <Content Include="Views\FurnitureAdvs\Details.cshtml" />
@@ -642,15 +643,21 @@
     <Content Include="Views\FurnitureAdvs\Accept.cshtml" />
     <Content Include="Views\FurnitureAdvs\DetailsAdmin.cshtml" />
     <Content Include="Views\AssetAdvs\AddComplaint.cshtml" />
-
     <Content Include="Views\FurnitureAdvs\CreateAdmin.cshtml" />
-
     <Content Include="Views\AssetAdvs\AARequests.cshtml" />
     <Content Include="Views\AssetAdvs\Sale.cshtml" />
     <Content Include="Views\AssetAdvs\Rent.cshtml" />
     <Content Include="Views\AssetAdvs\MyAdvs.cshtml" />
-
-
+    <Content Include="Views\Insurances\Create.cshtml" />
+    <Content Include="Views\Insurances\Delete.cshtml" />
+    <Content Include="Views\Insurances\Details.cshtml" />
+    <Content Include="Views\Insurances\Edit.cshtml" />
+    <Content Include="Views\Insurances\Index.cshtml" />
+    <Content Include="Views\BoughtAssets\Create.cshtml" />
+    <Content Include="Views\BoughtAssets\Delete.cshtml" />
+    <Content Include="Views\BoughtAssets\Details.cshtml" />
+    <Content Include="Views\BoughtAssets\Edit.cshtml" />
+    <Content Include="Views\BoughtAssets\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
