--- a/DariTn/DariTn.csproj
+++ b/DariTn/DariTn.csproj
@@ -193,6 +193,7 @@
     <Compile Include="Controllers\RestControllers\GuaranteesController.cs" />
     <Compile Include="Controllers\RestControllers\InsuranceAgenciesController.cs" />
     <Compile Include="Controllers\RestControllers\InsurancesController.cs" />
+    <Compile Include="Controllers\RestControllers\MediasController.cs" />
     <Compile Include="Controllers\RestControllers\OrdersController.cs" />
     <Compile Include="Controllers\RestControllers\LocalisationsController.cs" />
     <Compile Include="Controllers\RestControllers\PacksController.cs" />
@@ -698,6 +699,7 @@
     <Content Include="Views\VirtualTours\Ticks.cshtml" />
     <Content Include="Views\TimeSlots\Index2.cshtml" />
     <Content Include="Views\AssetAdvs\Details2.cshtml" />
+    <Content Include="Views\Medias\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
